<resources>
    <string name="app_name">TicTacToe</string>
    <string name="homeTile">Tic Tac Toe</string>
    <string name="playButton">Play</string>
    <string name="PlayerSetupTitle">Enter Player</string>
    <string name="Player1"> Player 1 </string>
    <string name="Player2">Player 2 </string>
    <string name="name">Name</string>
    <string name="submitButton">Submit</string>
    <string name="Enter">Enter player </string>

    <string name="playAgainButton">Play Again</string>
    <string name="homeButton">Home</string>
</resources>